# win2xcur-gui

./: .gitignore  README.md  com.jaoushingan.Win2xcur.json  io.github.ayasa520.Win2xcur.flatpakref  io.github.ayasa520.Win2xcur.json  meson.build
data/: com.jaoushingan.Win2xcur.desktop.in  com.jaoushingan.Win2xcur.gschema.xml  com.jaoushingan.Win2xcur.metainfo.xml.in  com.jaoushingan.Win2xcur.service.in  io.github.ayasa520.Win2xcur.desktop.in  io.github.ayasa520.Win2xcur.gschema.xml  io.github.ayasa520.Win2xcur.metainfo.xml.in  io.github.ayasa520.Win2xcur.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build  win2xcur-gui.pot  zh_CN.po
repo/: .gitignore  config  summary  summary.idx  summary.idx.sig  summary.sig  win2xcur.gpg
repo/delta-indexes/2Q/: 7ZosdFRAo3Y2xocQ11jshIirZohhMQq4fqa_dPZzw.index
repo/summaries/: 2585feb3de788b7be29bc8770cc2e98ec0d24e1df45b34ea773b36e9d560cffe-bf88cdf9e7f1f2cb2518f08b53a8e965aa4d06732ce6d5200c4d9484bbe71db3.delta  30f6fd07bd9cb7c24446ad0f493f6a3ffd2e46fbb920ff436fc9cd3ebf5a85cf-1b30890db96dc53291c0d1c8eb3a5b58c6ff9189f65d52e0cb53ed9507efdef2.delta  366da4f199b92a1babab65f5bfcd37592fe6ae22aa0510b417b834e755594730-bf88cdf9e7f1f2cb2518f08b53a8e965aa4d06732ce6d5200c4d9484bbe71db3.delta  3859c4c0262be1ad904cedcffe156cbcc2100117b2dcad71cdc9e271a71af428-a7c1702579d4218fb45f2f8c82ee3edeb7044db58ab772a145a41bce54853204.delta  (+10 more)
src/: constants.py  converter.py  cursor_preview.py  inf_parser.py  main.py  meson.build  models.py  win2xcur-gui.gresource.xml  win2xcur-gui.in  window.py  window.ui
(+75 files in other folders)
